versions/v4.2/README.md
# Beesness

![](assets/bees.png)

### **Beesness** is a game for 3-5 players that simulates a *capitalist market economy*. 

A *beesness* is a business for bees. 

Not your usual bees. In this game, bees have learned how to do business from us humans: they can *trade* flowers for honey and honey for more bees, and even *extort* honey from other beesnesses. 

**You** play the director of one beesness. You **compete** against other players over flowers (resources) and honey (money). 

**To win**, your beesness must end the game with **more honey** than any other beesness. 

Your beesness operates in the **garden of Commons**. If flowers run below the number of players, at any point during the game, **everybody loses** immediately! To avoid this tragedy, you can **trigger a referendum** to replant flowers.

Will you manage to maximise your honey profits while avoiding *drone strikes* and a collective *beesaster*?



# How to *beegin* <sup>setup</sup>

![](assets/setup.png)

1. Place the **beesness cards** `1` face up, stacked by bee type.

	Each player starts with **1 worker and 1 drone**.
2. Stack all the **honey** `2` in two piles. That will be the **bank**. 

	Each player starts with **6 honey** and can invest some (or all) of it in bees, before the game begins.
3. The **garden of Commons** `3` grows at the centre of the table. *Plant* **6 flower tokens** for each player. Each player will be able to pick flowers of **only which colour**, so decide which one you want.

	> For example: if there are 4 players, *plant* 24 flowers of 4 different colours. P1 will pick red flowers, P2 green, P3 blue and P4 yellow.  
4. Keep the rest of the flowers aside in the **unplanted flowers pile** `4`.
5. The **calendar** card `5` helps you keep track of the rounds. Place it next to the price chart. Put a **round marker** over the first round.
6. How many of you are playing? Take the **price chart** `6` for the current number of players and put it next to the bank. 

You are now ready to play!



# How to *beehave* <sup>gameplay</sup> 

### Players take turns, going *clockwise* around the table. :alarm_clock: 

**Rotate the starting player**. If you started this round, the player to your left will start the next.

:ballot_box_with_check: Before you start taking turns: 

- [ ] Do you have **1 worker and 1 drone** cards?
- [ ] Have you bought some bees with your initial **6 honey**?
- [ ] Have you chosen a **colour for your flowers**?

## Phase 1 - **Your turn**

### Use your cards to **execute your beesness plan** (1a). If flowers are running low, you can also trigger a **beesaster referendum** (1b) to replant the garden.

#### (1a) **Execute your beesness plan!**  

Every beesness card has a skill. Use as many of your cards as you like. 

<!--You can use new bees immediately, there's no need to wait for the next round.-->
	
> For example: you have 2 workers, 1 drone and 1 queen.  You could pick 2 flowers (1 flower each) with your 2 workers, then try and steal some honey from another beesness with your drone, and put some of the loot in your savings with the queen.

#### (1b) **Trigger a beesaster referendum!** 

Remember, should the flowers run below the number of players at any point during the game, then everybody would lose immediately. Game over! 

To avoid this *beesaster* (and to prevent other players from killing the game by taking the last few flowers) you can **call a vote to replenish the garden** during your turn.

`Are you willing to donate one of your bees in exchange for 2 new flowers?` 

Reveal your choice at the same time as everyone else using your hand: *closed fist* :facepunch: means you are unwilling to donate bees (voting **No**), *thumb up* :thumbsup: means you are voting **Yes**.

![](assets/ref.jpg)

**You get 1 vote for each of your bees**. For example, if you have a total of 5 bees, you get 5 votes.

* If there's a **majority of Yes** votes then *each* player will discard one of their beesness cards and add 2 new flowers to the garden. For example, in a 4-player game you would add 8 new flowers to the garden.
* Otherwise, no flowers are replanted this turn.


## Phase 2 - **End of the round**

### When all players have executed their *beesness plans*, the bank opens the **stalk exchange** and you have 1 minute to trade your flowers for honey (2a) and honey for bees (2b). Then you will **replant the garden** (2c) and move to the next round (2d).

#### (2a) **Trade flowers on the stalk exchange!**

You have 1 minute to decide how many of your flowers to put on the *stalk exchange*. **Everybody does this at the same time**.
	
You could get between `no honey` and `a lot of honey` for each flower you trade. Their price will depend on how many flowers are traded on the stalk exchange by all players. The more flowers, the less they are worth (a.k.a. [*supply&demand*](https://en.wikipedia.org/wiki/Supply_and_demand)).

<!--
Check the **flower price chart** to see how much you could get for your flowers. 

Total flowers traded | Price per flower
-------------------- | ----------------
< P <br>P = number of players | 6
P ... 2P - 1 | 5
2P ... 3P - 1 | 4
3P ... 4P - 1 | 3
4P + | 2
-->
	
Put the flowers you want to trade (from none to all) in your hand. Without revealing them, place your closed fist at the centre of the table. When everyone is ready, open your hands to show how many flowers you are trading.

![](assets/market.jpg)

Check the **price chart** to determine the **price of one flower**.
 
You get paid in honey, from the bank, for the flowers you are trading. 
	
> For example: if you are trading 2 flowers and their individual price is 3 honey, you get 6 honey from the bank.

Your flowers are now sold. Put them back onto the *unplanted flowers pile*.

#### (2b) **Buy beesness cards!**

If you have enough honey and want to expand your beesness, you *can* buy one or more beesness cards. 
	
Pay the bank the price for each card in honey and add the card(s) to your beesness.

#### (2c) **Replant the garden!**

Replant **one flower per player**: take flowers from the *pile of unplanted flowers* and add them to the *garden*.

> For example: if there are 4 players, add 4 flowers from the *pile of unplanted flowers* to the *garden*.	

#### (2d) Move the die to the next space on the **calendar** to keep track of the rounds.



# Meet the bees

Type | Price | Action | Discard or keep?
---- | ----- | ------ | ----------------
**Drone** <br><br>![](assets/drone-bee.png) | **3** honey | Roll the die and then **steal as much honey as the die says** from another beesness. | Discard
**Worker** <br><br>![](assets/worker-bee.png) | **6** honey | **Pick 1 flower** from the garden. | Keep
**Queen** <br><br>![](assets/queen.png) | **12** honey | Roll the die and then **save as much honey as the die says** up to a maximum of 12 honey. This means that drones won't be able to steal that honey, but also that you won't be able to use that honey to buy new bees (think of it as a *pension pot*). Place the saved honey on top of your Queen card. | Keep	

<!--
## Anatomy of a beesness card

![](assets/anatomy.png)
-->


# How to win

### At the end of the last round, **the player with the most honey wins!**



# How not to lose

### If flowers run below the number of players, at any point during the game, everybody loses *immediately*.

To avoid this *beesaster* (and to prevent other players from killing the game by taking the last flowers) you can **call a vote to replenish the garden** during your turn.

`Are you willing to donate one of your bees in exchange for 2 new flowers?` 

**You get 1 vote for each of your bees**. For example, if you have a total of 5 bees, you get 5 votes.

* If there's a **majority of Yes** votes then *each* player will discard one of their beesness cards and add 2 new flowers to the garden. For example, in a 4-player game you would add 8 new flowers to the garden.
* Otherwise, no flowers are replanted this turn.



# Sticky situations <sup>FAQs</sup>   

1. **Can I sell bees?**

	**No**. You are not allowed to sell your bees back to the bank. You can however **trade bees with other players**: see if anyone is interested in your bees and negotiate a price.
	
	<!-- You cannot dismiss bees. You can only make them redundant if you're being attacked by a drone and don't have enough honey -->
2. **Do my bees count at the end of the game?**

	**No**. It's just the honey you have (that is, your *profits*) and not the overall *valuation* of your beesness. 
3. **Can I make alliances with other players?**

	Sure, why not? The terms of your trade agreements are up to you. 
4. **What if I use my drone(s) against a beesness that has not enough honey?**

	You can only get as much honey as they have available.
5. **Can I use a drone and buy more beesness cards with the loot?**

	Not during the same turn. You'll have to wait the end of the round to invest your loot into new beesness cards.
6. **Can I lend honey to other players?** 

	Yas. As long as you trust them to pay their debt back...



## License

This work is licensed under a [Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License](http://creativecommons.org/licenses/by-nc-sa/4.0)

[![](http://mirrors.creativecommons.org/presskit/buttons/88x31/svg/by-nc-sa.svg)](http://creativecommons.org/licenses/by-nc-sa/4.0)
